templates/b46/style.css
/* ... */
  #serendipityQuickSearchTermField::placeholder {
    color: rgba(255, 249, 249, 0.5) }

#serendipityQuickSearchTermField,
#serendipity_comment input[type=text],
#serendipity_comment input[type=email],
#serendipity_comment input[type=url] { width: 95%; }

#serendipity_replyTo,
#serendipity_comment textarea { width: 95%; }

@media only screen and (min-width: 992px) {
  #serendipity_comment input[type=text],
  #serendipity_comment input[type=email],
  #serendipity_comment input[type=url] {
    width: 30em; }
  #serendipity_replyTo {
    width: max-content;
    max-width: 36em; }
}

/* bbar end */

/* revert _spacing.scss since we need some padding space for sudden ends, i.e. freetag aricles w/o paging */
.post.mb-4 {
  padding-bottom: 27px;
  padding-bottom: 1.5rem;
  margin-bottom: 0 !important; }

.post {
  margin-bottom: 18px;
  margin-bottom: 1rem; }
  .post blockquote {
    padding: 0 0 0 13,5px;
    padding: 0 0 0 .75rem;
    border-left: 4px solid #aaa; }

.post_meta .d-inline-block {
  vertical-align: initial; }
  .post_meta.plainList li.post_comments.d-inline-block a {
    margin-right: .5rem; }
  .post_admin.d-inline-block.text-editicon.editentrylink.btn.btn-admin.btn-sm {
    padding: 0 .25rem; }
  .post_meta  .bi.bi-pencil-square {
    margin-bottom: 3px; }

.meta, .summary, .year, #serendipity_category_form ul {
  list-style: none;
  padding: 0; }

.meta {
  margin: 18px 0;
  margin: 1rem 0; }
  .meta li {
    display: inline-block; }
    .meta li:after {
      content: ' | '; }
    .meta li:last-child:after {
      content: ''; }

.post pre, .page pre, .post .geshi, .page .geshi {
  font-size: 15.75px;
  font-size: .875rem;
  padding: 9px;
  padding: .5rem;
  background: #eee;
  border: 1px solid #aaa;
  font-size: .875em; }

pre {
  min-width: 20em;
  white-space: pre;
  white-space: pre-wrap;
  word-wrap: break-word; }

.pagination {
  margin: 0 0 18px;
  margin: 0 0 1rem;
  color: #666; }
  .pagination h3 {
    margin-left: auto;
    margin-right: auto;
    font-size: 14px;
    font-size: .8125rem;
    top: 27px;
    top: 1.5rem;
    font-weight: normal;
    margin-bottom: 0;
    margin-top: 0;
    max-width: 70%;
    position: relative;
    text-align: center; }
  .pagination a {
    text-decoration: none;
    -webkit-transition: color 0.3s linear;
    transition: color 0.3s linear; }

.prev-page, .next-page {
  width: 50%; }
  .prev-page [class^="icon-"]:before, .prev-page [class*=" icon-"]:before, .next-page [class^="icon-"]:before, .next-page [class*=" icon-"]:before {
    font-size: 36px;
    font-size: 2rem;
    margin: 0; }

.prev-page {
  float: left; }

.next-page {
  float: right;
  text-align: right; }

.serendipity_edit_nugget {
  display: block;
  text-align: end;
  font-size: 14px;
  font-size: .8125rem;
  line-height: 1.625rem; }

.comment header h4 {
  float: left; }

.comment > footer, .trackback-url, .comment-view, .comments-enable {
  font-size: 14px;
  font-size: .8125rem; }

/* comments styling add start */
/* blog/comments/ shortcuts */
.comment_info.plainList {
  border-right: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  padding: 0 9px 4px 9px;
  padding: 0 .5rem .222222rem .5rem;
  float: right;
  margin-right: -.5erm; }
  .comment.odd .comment_info.plainList,
  .comments_for_entry .comment.even .comment_info.plainList {
    background-color: #eee; }
  .comment.even .comment_info.plainList,
  .comments_for_entry .comment.odd .comment_info.plainList {
    background-color: #dfdfdf; }
  .comment_info .d-inline-block {
    vertical-align: middle; }
  .alert.alert-warning.serendipity_subscription_off {
    display: inline;
    margin: 0;
    padding: 2px 10px 7px;
    border-color: #856404; }
  .serendipity_subscription_off em {
    vertical-align: middle; }
  .comment .plainList.meta {
    margin-top: 0; }
article.post li.commentlevel_0 {
  margin-bottom: .25em; }
article.post li.comment .d-inline-block:not(.pc-owner) .bi.bi-file-person {
  background: #d8bfd8;/*thistle*//*#c0c0c0;silver*/}
article.post li .pc-owner {
  display: inline;
  background: #7fffd4;/*aquamarine*/
  margin-top: 1px;
  padding: 0 .25em;
  border-radius: 3px;
  border: 1px solid #50a286;
  color: #222;
  text-shadow: 0px 1px #6c6b6d; }
  .comment_content {
    padding: .5rem 0; }
  .comment_content pre:first-child {
    margin-top: 1.5rem; }
  .comment_content .alert {
    display: -webkit-inline-box;
    display: inline-block; }
#trackback_url {
  font-weight: bold;
  padding-top: .5rem;
  display: block; }
  .d-block.mb-2 #trackback_url {
    display: inline; }

#trackbacks ol {
  margin: .5rem 1.25rem; }
  #trackbacks ol li:nth-of-type(2n) {
    background-color: #eee; }
  #trackbacks .trackbacks-delete {
    font-size: small; }

.comment.odd, .comment.even,
.trackback.tb-odd, .trackback.tb-even {
  box-sizing: border-box;
  padding: 0 .4rem .4rem;
  border: 1px solid #ddd; }

#comments ol li:nth-of-type(2n),
.comments_for_entry .comment.odd {
  background: #eee; }
  #comments .plainList.meta li {
    background: initial; }
  #comments ol li .d-inline-block:nth-of-type(2n) {
    background: transparent; }

#trackbacks details > div {
  margin-left: 1.2rem; }

#comments .comment > footer {
  text-align: center;
  border: 1px solid #dfdfdf;
  background: #f7f7f7;
  border-radius: 4px 4px 4px 4px;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-top: 1rem; }

#comments .comment > footer .meta {
  margin: .25rem 0; }
.comments_for_entry .comment.odd > footer .meta {
  border: 1px solid #ddd;
  background-color: #fdfdfd;
  box-shadow: 1px 1px 2px #ededed; }
.comments_for_entry .comment.even > footer .meta {
  border: 1px solid #ddd;
  background-color: #fefefe;
  box-shadow: 1px 1px 2px #eee; }

.comment_avatar {
  background-color: #ddd;
  border: 2px solid #acacac;
  border-radius: 4px 4px 4px 4px;
  color: #333;
  float: right;
  margin: 0 0 0 .625rem; }

.serendipity_plugin_comments_avatar {
  height: 30px;
  width: 30px; }
/* ... */

